--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,10 @@
     <link rel="stylesheet" href="./scss/style.scss">
     <title>Introduce</title>
 </head>
+
 <body>
-    <div class="vertical-section">Content above</div>
+    <!-- scroll js -->
+    <!-- <div class="vertical-section">Content above</div>
 
     <div class="sticky-container">
         <main>
@@ -42,8 +45,11 @@
                 <h1>The End</h1>
             </section>
         </main>
-    </div>
-        
-    <script src="./js/scroll.js"></script>
+    </div> -->
+
+
+
+    <!-- <script src="./js/scroll.js"></script> -->
 </body>
+
 </html>
